Implement basic login

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,13 @@
 <html>
   <head>
     <title><%= full_title(yield(:title)) %></title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
 
     <%= render 'layouts/rails_default'  %>
     <%= render 'layouts/shim' %>
 
-  <body>
+  <body style="background-color: grey;">
     <%= render 'layouts/header' %>
     <div class="conatiner">
       <% flash.each do |message_type, message| %>
