--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -136,7 +136,7 @@ input {
 }
 
 .field_with_errors {
-  @extend .has-error;
+  @extend .has-error; /* has-error is obsolete as of 4.0.0, find a new way to use it*/
   .form-control {
     color: $state-danger-text;
   }
@@ -164,6 +164,24 @@ footer {
     li {
       float:left;
       margin-left: 15px;
+    }
+  }
+}
+
+@media (max-width: 800px) {
+  footer {
+    small {
+      display: block;
+      float: none;
+      margin-bottom: 1em;
+    }
+    ul {
+      float: none;
+      padding: 0;
+      li {
+        float: none;
+        margin-left: 0;
+      }
     }
   }
 }
