--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= render 'layouts/rails_default'  %>
     <%= render 'layouts/shim' %>
 
-  <body style="background-color: grey;">
+  <body>
     <%= render 'layouts/header' %>
     <div class="conatiner">
       <% flash.each do |message_type, message| %>
